Can now plot grouped single plots for some plot types (line, bar, scatter)
Fixed sharey, sharex for grouped plots
Added ability to choose pre-defined mpl styles
Fix to memory leak on redraws
Changes to right click copy behaviour
Fix for displaying small floats
Added floating precision to table preferences
Clipboard bug fix
Improvement to merge dialog

------
0.7.2
------

Added black and white option for plotting
Fix to avoid white lines with some colormaps
Can now add text annotations to plots
Most plot options are now saved including grid settings
-t option for launching a test app
fix to scatter colors

------
0.7.1
------

Updated code for python 2.7 compatibility
Plot labels now in separate annotation tab
Added color by column value for scatter plots
Can now only save as messagepack, other formats are under export

------
0.7.0
------

Added fill data functions for columns
Updates to 3D plotting allow working contour, wireframe and surface plots
Added contour and imshow plots
Can now display plot options vertically
IPython console plugin
Combining multiple separate plots now possible

------
0.6.0
------

Implemented plugin system with sample seaborn plugin
Meta data now saved with project files - allows saving plots and selections
Can add a table to plot using sub-table contents
Changed function evaluation so that math functions work
Column-wise functions can be applied
Added ability to show error bars in plots
Various fixes for table selections
Integrated table copy and paste into toolbars
Added melt function for converting to long form data

------
0.5.0
------

Model fitting interface using statsmodels
Added ability to create/edit categorical columns
Clean data options added
Dialog to apply row-wise functions added to column menu
String operations added to column menu
Correlation matrix calculator
Re-did aggregate dialog
Row index header to show index names
Display column multiiindexes
Cell text now fits columns properly for all sizes